--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     plan: free
     envVars:
       - key: GROQ_API_KEY
-        # Você vai adicionar no painel do Render
+        # Adicione no painel do Render
       - key: TWILIO_ACCOUNT_SID
         # Adicione no painel
       - key: TWILIO_AUTH_TOKEN
